*Empty MediaWiki Message*

--- a/Ikawa_ya_Maraba.mw
+++ b/Ikawa_ya_Maraba.mw
@@ -8,6 +8,7 @@ Ikawa ni kimwe mu bihingwa ngengabukungu gifite isoko ryo  hanze y’igihugu kik
 
 Imvaho Nshya yanyarukiye muri uwo Murenge kureba uko abahinzi ba kawa yaho babayeho niba kuba yitwa ko ari iyambere bibagiraho ingaruka nziza cyangwa biherera iyo. Aho twabasanze ni kuri koperative Abahuzamugambi,  hakaba hari na labolatwari ibafasha kurobanura ikawa. Kuri iyo koperative twasanze batoranya ikawa batubwira ko uretse kuyihinga koperative ibaha n’akazi kandi ikabahemba ku buryo ngo ikibazo cy’ubushomeri muri uwo Murenge cyagabanutse. Ngo barashimira Perezida wa Repubulika ko muri iyi manda ishize hari aho bavuye bakaba bafite n’aho bageze ngo kubera gahunda Leta yashyizeho zo kwibumbira mu makoperative ndetse n’izo kubaka inganda kuko byabagabanyirije imvune ndende bagiraga ubwo bari bagikoresha uburyo bwo hambere bwo gusya n’urusyo gusa ngo byaba byiza cyane bongerewe imashini bityo umusaruro ukiyongera.
 
+USAID, ikigo cy’abanyamerika gitsura amajyambere, cyerekanye ibicuruzwa bikomoka ku buhinzi yafashije Abanyarwanda gushakira amasoko mu bihugu by’[[Uburayi]] na [[Leta Zunze Ubumwe z’Amerika]]. Muri ibyo bicuruzwa harimo ikawa ya Maraba, urusenda, ifu y’imyumbati y’i Butare, umutobe w’amatunda bita Agashya, n’inzoga ikoze mu ikawa yo mu Rwanda yengerwa muri Amerikai. Iyo nzoga icyakora ntiratangira gucururizwa mu Rwanda. 
 
 == Imiyoboro ==
 *[http://www.orinfor.gov.rw/printmedia/news.php?type=rw&volumeid=81&cat=4&storyid=2456 Maraba: Kawa yabateje imbere, hari ibyo banasaba Kagame]
