*Empty MediaWiki Message*

--- a/Burayi.mw
+++ b/Burayi.mw
@@ -4,7 +4,8 @@
 [[File:Simplified Languages of Europe map.svg|thumb|250px|right|]]
 [[File:Grossgliederung Europas.png|thumb|300px|]]
 [[File:First.Crusade.Map.jpg|thumb|[[1000]].]]
-'''Uburayi''' ni umwe mu migabane igize isi.
+
+'''Uburayi''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[isi]].
 
 == Urutonde rw’ibihugu ==
 
