*Empty MediaWiki Message*

--- a/Afurika.mw
+++ b/Afurika.mw
@@ -1,6 +1,6 @@
-[[File:Africa satellite orthographic.jpg|thumb|right|350px|Afurika]]
+[[File:Africa satellite orthographic.jpg|thumb|right|350px|Ikarita y’Afurika]]
 
-'''Afurika''' 
+Umugabane w’'''Afurika''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[isi]].
 
 
 
