*Empty MediaWiki Message*

--- a/Amerika.mw
+++ b/Amerika.mw
@@ -3,6 +3,8 @@
 Umugabane w’'''Amerika''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[isi]].
 
 == ==
+*[[Amerika ya Ruguru]]
+*
 
 [[Category:Amerika]]
 
