--- a/Amerika.mw
+++ b/Amerika.mw
@@ -4,7 +4,7 @@ Umugabane w’'''Amerika''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[is
 
 == ==
 *[[Amerika ya Ruguru]]
-*
+*[[Amerika y’Epfo]]
 
 [[Category:Amerika]]
 
