*Empty MediaWiki Message*

--- a/Amerika.mw
+++ b/Amerika.mw
@@ -1,4 +1,4 @@
-[[File:Americas (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’ byaduka</font>]]
+[[File:Americas (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Amerika</font>]]
 
 Umugabane w’'''Amerika''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[isi]].
 
