*Empty MediaWiki Message*

--- a/Oseyaniya.mw
+++ b/Oseyaniya.mw
@@ -1,4 +1,5 @@
 [[File:Oceania (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Oseyaniya</font>]]
+[[File:Pacific Culture Areas.jpg|thumb|250px|<font color="grey">Ikarita y’Oseyaniya</font>]]
 
 Umugabane w’'''Oseyaniya''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[isi]].
 
