*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -50,7 +50,7 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Arabiya Sawudite]]
 | [[ISO 3166-1 alpha-2#SA|<tt>SA</tt>]] || <tt>SAU</tt> || <tt>682</tt> || [[ISO 3166-2:SA]]
 |-
-| [[Arijantina]]
+| [[Arijantine]]
 | [[ISO 3166-1 alpha-2#AR|<tt>AR</tt>]] || <tt>ARG</tt> || <tt>032</tt> || [[ISO 3166-2:AR]]
 |-
 | [[Aruba]]
