*Empty MediaWiki Message*

--- a/Turukiya.mw
+++ b/Turukiya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Turkey.svg|thumb|250px|<font color="grey">Ibendera rya Turukiya</font>]]
 [[File:Turkey (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Turukiya</font>]]
 
-'''Turukiya''' (izina mu [[kiturukiya]] : ''Türkiye'' ) n’[[igihugu]] muri [[Uburayi]] na [[Aziya]].
+'''Turukiya''' (izina mu [[kinyaturukiya]] : ''Türkiye'' ) n’[[igihugu]] muri [[Uburayi]] na [[Aziya]].
 
 == ==
 *[[Abaperezida ba Turukiya]]
