robot Ajoute: [[en:Oceania]]

--- a/Oseyaniya.mw
+++ b/Oseyaniya.mw
@@ -8,149 +8,150 @@ Umugabane w’'''Oseyaniya''' ni umwe mu [[Umugabane w’Isi|migabane]] igize [[
 
 [[ace:Oseania]]
 [[af:Oseanië]]
-[[ar:أوقيانوسيا]]
 [[an:Oceanía]]
-[[frp:Ocèanie]]
+[[ar:أوقيانوسيا]]
+[[arz:اوشيانيا]]
 [[as:ওচেনিয়া]]
 [[ast:Oceanía]]
 [[az:Avstraliya və Okeaniya]]
-[[bm:Oseania]]
-[[bn:ওশেনিয়া]]
-[[zh-min-nan:Tāi-iûⁿ-chiu]]
+[[bat-smg:Okeanėjė]]
+[[bcl:Oceanya]]
 [[be:Акіянія]]
 [[be-x-old:Акіянія]]
-[[bcl:Oceanya]]
-[[bo:རྒྱ་མཚོ་ཆེན་པོའི་གླིང་ཆེན།]]
-[[bs:Okeanija]]
-[[br:Okeania]]
 [[bg:Океания]]
+[[bm:Oseania]]
+[[bn:ওশেনিয়া]]
+[[bo:རྒྱ་མཚོ་ཆེན་པོའི་གླིང་ཆེན།]]
+[[br:Okeania]]
+[[bs:Okeanija]]
 [[ca:Oceania]]
-[[cv:Океани]]
 [[ceb:Oseyaniya]]
+[[crh:Avstraliya ve Okeaniya]]
 [[cs:Oceánie]]
+[[cv:Океани]]
 [[cy:Oceania]]
 [[da:Oceanien]]
 [[de:Ozeanien]]
+[[diq:Okyanusya]]
 [[dsb:Oceanija]]
-[[et:Okeaania]]
 [[el:Ωκεανία]]
-[[es:Oceanía]]
+[[en:Oceania]]
 [[eo:Oceanio]]
-[[ext:Oceanía]]
+[[es:Oceanía]]
+[[et:Okeaania]]
 [[eu:Ozeania]]
+[[ext:Oceanía]]
 [[fa:اقیانوسیه]]
-[[hif:Oceania]]
+[[fi:Oseania]]
+[[fiu-vro:Okõaania]]
 [[fo:Kyrrahavsoyggjarnar]]
 [[fr:Océanie]]
-[[fy:Oseaanje]]
+[[frp:Ocèanie]]
+[[frr:Oseåånien]]
 [[fur:Oceanie]]
+[[fy:Oseaanje]]
 [[ga:An Aigéine]]
+[[gag:Okeaniya]]
+[[gan:大洋洲]]
 [[gd:Roinn a' Chuain Shèimh]]
 [[gl:Oceanía]]
-[[frr:Oseåånien]]
-[[gan:大洋洲]]
 [[glk:اوقیانوسیه]]
-[[gag:Okeaniya]]
-[[ko:오세아니아]]
-[[hy:Օվկիանիա]]
+[[he:אוקיאניה]]
 [[hi:ओशिआनिया]]
-[[hsb:Oceanija]]
+[[hif:Oceania]]
 [[hr:Oceanija]]
-[[io:Oceania]]
-[[id:Oseania]]
+[[hsb:Oceanija]]
+[[ht:Oseyani]]
+[[hu:Ausztrália és Óceánia]]
+[[hy:Օվկիանիա]]
 [[ia:Oceania]]
+[[id:Oseania]]
 [[ie:Oceania]]
-[[os:Океани]]
+[[io:Oceania]]
 [[is:Eyjaálfa]]
 [[it:Oceania]]
-[[he:אוקיאניה]]
+[[ja:オセアニア]]
 [[jv:Oséania]]
-[[kl:Oceania]]
-[[kn:ಒಷ್ಯಾನಿಯ]]
 [[ka:ოკეანეთი]]
+[[kl:Oceania]]
+[[km:អូសេអានី]]
+[[kn:ಒಷ್ಯಾನಿಯ]]
+[[ko:오세아니아]]
+[[krc:Океания]]
 [[kw:Oceania]]
 [[ky:Океания]]
-[[sw:Australia na Pasifiki]]
-[[ht:Oseyani]]
-[[lad:Oseania]]
-[[krc:Океания]]
 [[la:Oceania]]
-[[lv:Okeānija]]
+[[lad:Oseania]]
 [[lb:Ozeanien]]
-[[lt:Okeanija]]
-[[lij:Oçeania]]
 [[li:Oceanië]]
+[[lij:Oçeania]]
 [[lmo:Uceania]]
-[[hu:Ausztrália és Óceánia]]
-[[mk:Океанија]]
+[[lt:Okeanija]]
+[[lv:Okeānija]]
 [[mg:Oseania]]
+[[mhr:Океаний]]
+[[mk:Океанија]]
 [[ml:ഓഷ്യാനിയ]]
-[[mt:Oċeanja]]
-[[mr:ओशनिया]]
-[[arz:اوشيانيا]]
-[[ms:Oceania]]
-[[mwl:Ouceanie]]
 [[mn:Австрали ба Номхон далайн орнууд]]
+[[mr:ओशनिया]]
+[[ms:Oceania]]
+[[mt:Oċeanja]]
+[[mwl:Ouceanie]]
 [[my:Oceania]]
 [[nah:Oceania]]
-[[nl:Oceanië]]
-[[ne:ओसेनिया]]
-[[ja:オセアニア]]
-[[no:Oseania]]
-[[nn:Oseania]]
-[[nrm:Ochéannie]]
-[[nov:Oseania]]
-[[oc:Oceania]]
-[[mhr:Океаний]]
-[[pnb:اوشیانا]]
-[[km:អូសេអានី]]
-[[pcd:Ochéani]]
-[[tpi:Osenia]]
 [[nds:Ozeanien]]
+[[ne:ओसेनिया]]
+[[nl:Oceanië]]
+[[nn:Oseania]]
+[[no:Oseania]]
+[[nov:Oseania]]
+[[nrm:Ochéannie]]
+[[oc:Oceania]]
+[[os:Океани]]
+[[pcd:Ochéani]]
 [[pl:Oceania]]
+[[pnb:اوشیانا]]
 [[pnt:Ωκεανίαν]]
 [[pt:Oceania]]
-[[crh:Avstraliya ve Okeaniya]]
-[[ro:Oceania]]
-[[rm:Oceania]]
 [[qu:Usiyanya]]
+[[rm:Oceania]]
+[[ro:Oceania]]
+[[roa-tara:Oceanie]]
 [[ru:Океания]]
 [[sah:Океания]]
-[[se:Oseania]]
-[[sm:Oceania]]
-[[sco:Oceanie]]
-[[sq:Oqeania]]
 [[scn:Oceania]]
+[[sco:Oceanie]]
+[[se:Oseania]]
+[[sh:Oceanija]]
 [[simple:Oceania]]
 [[sk:Austrália a Oceánia]]
 [[sl:Oceanija]]
-[[szl:Uoceańijo]]
+[[sm:Oceania]]
 [[so:Ooshiyaaniya]]
-[[srn:Oseyaniya]]
+[[sq:Oqeania]]
 [[sr:Океанија]]
-[[sh:Oceanija]]
-[[fi:Oseania]]
+[[srn:Oseyaniya]]
 [[sv:Oceanien]]
-[[tl:Oceania]]
+[[sw:Australia na Pasifiki]]
+[[szl:Uoceańijo]]
 [[ta:ஓசியானியா]]
-[[roa-tara:Oceanie]]
-[[tt:Океанлык]]
 [[te:ఓషియానియా]]
-[[th:โอเชียเนีย]]
 [[tg:Уқёнусия]]
-[[tr:Okyanusya]]
+[[th:โอเชียเนีย]]
 [[tk:Okeaniýa]]
+[[tl:Oceania]]
+[[tpi:Osenia]]
+[[tr:Okyanusya]]
+[[tt:Океанлык]]
 [[uk:Океанія]]
 [[ur:اوقیانوسیہ]]
 [[vec:Oceania]]
 [[vi:Châu Đại Dương]]
-[[fiu-vro:Okõaania]]
-[[zh-classical:大洋洲]]
 [[war:Oceania]]
 [[wo:Oseyaani]]
 [[yi:אקעאניע]]
 [[yo:Oṣéáníà]]
-[[zh-yue:大洋洲]]
-[[diq:Okyanusya]]
-[[bat-smg:Okeanėjė]]
 [[zh:大洋洲]]
+[[zh-classical:大洋洲]]
+[[zh-min-nan:Tāi-iûⁿ-chiu]]
+[[zh-yue:大洋洲]]
