r2.5.2) (robot Ajoute: [[en:Anguilla]]

--- a/Angwiya.mw
+++ b/Angwiya.mw
@@ -7,81 +7,82 @@
 [[Category:Ibihugu]]
 
 [[af:Anguilla (eiland)]]
+[[an:Anguila]]
 [[ang:Anguilla]]
 [[ar:أنجويلا]]
-[[an:Anguila]]
 [[az:Angilya]]
-[[zh-min-nan:Anguilla]]
 [[be:Ангілья]]
 [[be-x-old:Ангілья]]
-[[bs:Angvila]]
-[[br:Anguilla]]
 [[bg:Ангуила]]
+[[br:Anguilla]]
+[[bs:Angvila]]
 [[ca:Anguilla]]
 [[cs:Anguilla]]
 [[cy:Anguilla]]
 [[da:Anguilla (land)]]
 [[de:Anguilla]]
-[[dv:އަންގީލާ]]
 [[dsb:Anguilla]]
-[[et:Anguilla]]
+[[dv:އަންގީލާ]]
 [[el:Ανγκουίλα]]
-[[es:Anguila (dependencia)]]
+[[en:Anguilla]]
 [[eo:Angvilo]]
+[[es:Anguila (dependencia)]]
+[[et:Anguilla]]
 [[eu:Angila]]
 [[fa:آنگویلا]]
+[[fi:Anguilla]]
 [[fr:Anguilla]]
 [[gl:Anguila - Anguilla]]
-[[ko:앵귈라]]
-[[hy:Անգիլիա]]
+[[he:אנגווילה]]
 [[hi:ऐंगुइला]]
 [[hr:Angvila]]
-[[io:Anguila]]
+[[hu:Anguilla]]
+[[hy:Անգիլիա]]
 [[id:Anguilla]]
+[[io:Anguila]]
 [[is:Angvilla]]
 [[it:Anguilla (isola)]]
-[[he:אנגווילה]]
+[[ja:アンギラ]]
 [[jv:Anguilla]]
 [[ka:ანგილია]]
 [[kk:Аңгилия]]
+[[ko:앵귈라]]
 [[kw:Angwilla]]
-[[sw:Anguilla]]
-[[lv:Angilja]]
 [[lb:Anguilla]]
-[[lt:Angilija]]
 [[lij:Anguilla]]
 [[lmo:Anguilla]]
-[[hu:Anguilla]]
+[[lt:Angilija]]
+[[lv:Angilja]]
 [[mk:Ангилја]]
 [[mr:अँग्विला]]
 [[ms:Anguilla]]
-[[nl:Anguilla (eiland)]]
-[[ja:アンギラ]]
-[[no:Anguilla]]
-[[nn:Anguilla]]
-[[nrm:Anguilla]]
-[[nov:Angila]]
-[[pms:Anguilla]]
 [[nds:Anguilla (Eiland)]]
+[[nl:Anguilla (eiland)]]
+[[nn:Anguilla]]
+[[no:Anguilla]]
+[[nov:Angila]]
+[[nrm:Anguilla]]
 [[pl:Anguilla]]
+[[pms:Anguilla]]
 [[pt:Anguilla]]
 [[ro:Anguilla]]
 [[ru:Ангилья]]
-[[sq:Anguilla]]
+[[sh:Angvila]]
 [[simple:Anguilla]]
 [[sk:Anguilla]]
 [[sl:Angvila]]
+[[sq:Anguilla]]
 [[sr:Ангвила]]
-[[sh:Angvila]]
-[[fi:Anguilla]]
 [[sv:Anguilla]]
+[[sw:Anguilla]]
 [[ta:அங்கியுலா]]
 [[th:แองกวิลลา]]
 [[tr:Anguilla]]
-[[uk:Ангілья]]
 [[ug:ئانگۋىللا]]
+[[uk:Ангілья]]
 [[vi:Anguilla]]
 [[war:Anguilla]]
 [[wo:Angila]]
 [[yo:Àngúíllà]]
 [[zh:安圭拉]]
+[[zh-min-nan:Anguilla]]
