r2.5.2) (robot Ajoute: [[en:Antarctica]]

--- a/Antarigitika.mw
+++ b/Antarigitika.mw
@@ -6,167 +6,168 @@ Umugabane w’'''Antarigitika''' ni umwe mu [[Umugabane w’Isi|migabane]] igize
 
 [[ace:Antartika]]
 [[af:Antarktika]]
+[[an:Antarctida]]
 [[ang:Antarctica]]
 [[ar:أنتاركتيكا]]
-[[an:Antarctida]]
 [[arc:ܐܢܛܐܪܩܛܝܩܐ]]
-[[roa-rup:Antarctica]]
-[[frp:Antartica]]
+[[arz:انتاركتيكا]]
 [[as:এন্টাৰ্কটিকা]]
 [[ast:Antártida]]
-[[gn:Antártida]]
 [[az:Antarktida]]
-[[bn:অ্যান্টার্কটিকা]]
-[[zh-min-nan:Lâm-ke̍k Tāi-lio̍k]]
 [[ba:Антарктика]]
+[[bat-smg:Antarktėda]]
+[[bcl:Antartika]]
 [[be:Антарктыда]]
 [[be-x-old:Антарктыда]]
-[[bcl:Antartika]]
-[[bo:ལྷོ་མཐའི་གླིང་།]]
-[[bs:Antarktik]]
-[[br:Antarktika]]
 [[bg:Антарктида]]
+[[bn:অ্যান্টার্কটিকা]]
+[[bo:ལྷོ་མཐའི་གླིང་།]]
+[[bpy:এন্টার্কটিকা]]
+[[br:Antarktika]]
+[[bs:Antarktik]]
 [[ca:Antàrtida]]
-[[cv:Антарктида]]
+[[chr:ᏧᏁᏍᏓᎸ]]
+[[ckb:ئانتارکتیکا]]
+[[crh:Antarktida]]
 [[cs:Antarktida]]
+[[cu:Антарктїка]]
+[[cv:Антарктида]]
 [[cy:Yr Antarctig]]
 [[da:Antarktis]]
 [[de:Antarktis]]
-[[nv:Shádiʼááhjí kéyah yistinígíí]]
 [[dsb:Antarktis]]
 [[dz:ཨེན་ཊཱག་ཊི་ཀ་]]
-[[et:Antarktis]]
 [[el:Ανταρκτική]]
-[[es:Antártida]]
+[[en:Antarctica]]
 [[eo:Antarkto]]
-[[ext:Antáltia]]
+[[es:Antártida]]
+[[et:Antarktis]]
 [[eu:Antartika]]
+[[ext:Antáltia]]
 [[fa:جنوبگان]]
-[[hif:Antarctica]]
+[[fi:Etelämanner]]
+[[fiu-vro:Antarktiga]]
 [[fo:Antarktis]]
 [[fr:Antarctique]]
-[[fy:Antarktika]]
+[[frp:Antartica]]
+[[frr:Antarktikaa]]
 [[fur:Antartic]]
+[[fy:Antarktika]]
 [[ga:Antartaice]]
+[[gan:南極洲]]
 [[gd:Antargtaga]]
 [[gl:Antártida]]
-[[gan:南極洲]]
 [[glk:نسا توک]]
+[[gn:Antártida]]
 [[gu:ઍન્ટાર્કટિકા]]
 [[hak:Nàm-khi̍t-chû]]
-[[xal:Антарктик]]
-[[ko:남극]]
 [[haw:‘Ane‘ālika]]
-[[hy:Անտարկտիդա]]
+[[he:אנטארקטיקה]]
 [[hi:अंटार्कटिका]]
-[[hsb:Antarktis]]
+[[hif:Antarctica]]
 [[hr:Antarktika]]
-[[io:Antarktika]]
-[[ig:Antarctica]]
-[[bpy:এন্টার্কটিকা]]
-[[id:Antarktika]]
+[[hsb:Antarktis]]
+[[ht:Antatik (kontinan)]]
+[[hu:Antarktisz]]
+[[hy:Անտարկտիդա]]
 [[ia:Antarctica]]
+[[id:Antarktika]]
 [[ie:Antarctic]]
-[[os:Антарктидæ]]
+[[ig:Antarctica]]
+[[io:Antarktika]]
 [[is:Suðurskautslandið]]
 [[it:Antartide]]
-[[he:אנטארקטיקה]]
+[[ja:南極大陸]]
+[[jbo:ziptu'a]]
 [[jv:Antartika]]
+[[ka:ანტარქტიდა]]
+[[kaa:Antarktika]]
+[[kk:Антарктида]]
 [[kl:Qalasersuaq Kujalleq]]
 [[kn:ಅಂಟಾರ್ಕ್ಟಿಕ]]
+[[ko:남극]]
 [[krc:Антарктида]]
-[[ka:ანტარქტიდა]]
-[[kk:Антарктида]]
+[[ksh:Süüdpool]]
+[[ku:Antarktîka]]
 [[kw:Antarktika]]
 [[ky:Антарктида]]
-[[sw:Bara la Antaktiki]]
-[[ht:Antatik (kontinan)]]
-[[ku:Antarktîka]]
 [[la:Antarctica]]
-[[lv:Antarktīda]]
 [[lb:Antarktis]]
-[[lt:Antarktida]]
-[[lij:Antartigo]]
 [[li:Antarctica]]
-[[jbo:ziptu'a]]
+[[lij:Antartigo]]
 [[lmo:Antartich]]
-[[hu:Antarktisz]]
-[[mk:Антарктик]]
+[[lt:Antarktida]]
+[[lv:Antarktīda]]
 [[mg:Antartika]]
+[[mhr:Антарктида]]
+[[mk:Антарктик]]
 [[ml:അന്റാർട്ടിക്ക]]
+[[mn:Антарктид]]
 [[mr:अंटार्क्टिका]]
-[[arz:انتاركتيكا]]
 [[ms:Antartika]]
 [[mwl:Antártica]]
-[[mn:Антарктид]]
-[[nl:Antarctica]]
-[[ne:अन्टार्कटिका]]
-[[ja:南極大陸]]
-[[frr:Antarktikaa]]
-[[pih:Antartica]]
-[[no:Antarktika]]
-[[nn:Antarktis]]
-[[nov:Antarktika]]
-[[oc:Antartida]]
-[[mhr:Антарктида]]
-[[uz:Antarktida]]
-[[pa:ਐਂਟਾਰਕਟਿਕਾ]]
-[[pnb:انٹارکٹکا]]
-[[pcd:Intarktike]]
-[[pms:Antàrtide]]
 [[nds:Antarktis]]
+[[ne:अन्टार्कटिका]]
+[[nl:Antarctica]]
+[[nn:Antarktis]]
+[[no:Antarktika]]
+[[nov:Antarktika]]
+[[nv:Shádiʼááhjí kéyah yistinígíí]]
+[[oc:Antartida]]
+[[os:Антарктидæ]]
+[[pa:ਐਂਟਾਰਕਟਿਕਾ]]
+[[pcd:Intarktike]]
+[[pih:Antartica]]
 [[pl:Antarktyda]]
+[[pms:Antàrtide]]
+[[pnb:انٹارکٹکا]]
 [[pnt:Ανταρκτικήν]]
 [[pt:Antártica]]
-[[kaa:Antarktika]]
-[[crh:Antarktida]]
-[[ksh:Süüdpool]]
-[[ro:Antarctida]]
 [[qu:Antartika]]
+[[ro:Antarctida]]
+[[roa-rup:Antarctica]]
+[[roa-tara:Antartide]]
 [[ru:Антарктида]]
 [[sah:Антарктика]]
-[[se:Antárktis]]
-[[sm:Anetatika]]
-[[sco:Antarcticae]]
-[[stq:Antarktikoa]]
-[[sq:Antarktiku]]
 [[scn:Antàrtidi]]
+[[sco:Antarcticae]]
+[[se:Antárktis]]
+[[sh:Antarktik]]
 [[simple:Antarctica]]
 [[sk:Antarktída]]
-[[cu:Антарктїка]]
 [[sl:Antarktika]]
-[[szl:Antarktyda]]
+[[sm:Anetatika]]
 [[so:Antiarktis]]
-[[ckb:ئانتارکتیکا]]
+[[sq:Antarktiku]]
 [[sr:Антарктик]]
-[[sh:Antarktik]]
+[[stq:Antarktikoa]]
 [[su:Antartika]]
-[[fi:Etelämanner]]
 [[sv:Antarktis]]
-[[tl:Antartiko]]
+[[sw:Bara la Antaktiki]]
+[[szl:Antarktyda]]
 [[ta:அண்டார்க்டிக்கா]]
-[[roa-tara:Antartide]]
-[[tt:Антарктида]]
 [[te:అంటార్కిటికా]]
-[[th:ทวีปแอนตาร์กติกา]]
 [[tg:Антарктида]]
-[[to:ʻAnetātika]]
-[[chr:ᏧᏁᏍᏓᎸ]]
-[[tr:Antarktika]]
+[[th:ทวีปแอนตาร์กติกา]]
 [[tk:Antarktika]]
+[[tl:Antartiko]]
+[[to:ʻAnetātika]]
+[[tr:Antarktika]]
+[[tt:Антарктида]]
 [[uk:Антарктида]]
 [[ur:انٹارکٹیکا]]
-[[za:Namzgigcouh]]
+[[uz:Antarktida]]
 [[vec:Antartide]]
 [[vi:Châu Nam Cực]]
-[[fiu-vro:Antarktiga]]
 [[wa:Antartike]]
-[[zh-classical:南極洲]]
 [[war:Antartika]]
 [[wo:Goxub Dottub Bëj-saalum]]
+[[xal:Антарктик]]
 [[yi:אנטארקטיקע]]
 [[yo:Antarctica]]
-[[zh-yue:南極洲]]
+[[za:Namzgigcouh]]
 [[zea:Antartica]]
-[[bat-smg:Antarktėda]]
 [[zh:南极洲]]
+[[zh-classical:南極洲]]
+[[zh-min-nan:Lâm-ke̍k Tāi-lio̍k]]
+[[zh-yue:南極洲]]
