*Empty MediaWiki Message*

--- a/Butani.mw
+++ b/Butani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Bhutan.svg|thumb|250px|<font color="grey">Ibendera rya Butani</font>]]
 [[File:Bhutan (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Butani</font>]]
 
-'''Butani''' (izina mu [[kinyazongika]] : '''འབྲུག་རྒྱལ་ཁབ'''་ ; izina mu [[cyongereza]] : ''Türkmenistan'' ) n’[[igihugu]] muri [[Aziya]].
+'''Butani''' (izina mu [[kinyazongika]] : '''འབྲུག་རྒྱལ་ཁབ'''་ ; izina mu [[cyongereza]] : ''Bhutan'' ) n’[[igihugu]] muri [[Aziya]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
