*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -212,7 +212,7 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Ibirwa Bito Bikikije Leta Zunze Ubumwe]]
 | [[ISO 3166-1 alpha-2#UM|<tt>UM</tt>]] || <tt>UMI</tt> || <tt>581</tt> || [[ISO 3166-2:UM]]
 |-
-| Ibirwa bya Aland
+| Ibirwa by’Alande
 | [[ISO 3166-1 alpha-2#AX|<tt>AX</tt>]] || <tt>ALA</tt> || <tt>248</tt> || [[ISO 3166-2:AX]]
 |-
 | [[Ibirwa bya Farowe]]
