--- a/Finilande.mw
+++ b/Finilande.mw
@@ -1,7 +1,7 @@
 [[File:EU-Finland.svg|thumb|Finilande]]
 [[File:Flag of Finland.svg|right|thumb|150px|Finilande]]
 
-'''Finilande''' n’igihugu muri [[Uburayi]].
+'''Finilande''' (izina mu [[kinyafinilande]] : ''Suomi'' ; izina mu [[kinyafinilande ]] : ''Finland'' ) n’igihugu muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
