*Empty MediaWiki Message*

--- a/Finilande.mw
+++ b/Finilande.mw
@@ -1,5 +1,5 @@
-[[File:EU-Finland.svg|thumb|Finilande]]
-[[File:Flag of Finland.svg|right|thumb|150px|Finilande]]
+[[File:Flag of Finland.svg|thumb|250px|<font color="grey">Ibendera rya Finilande</font>]]
+[[File:EU-Finland.svg|thumb|250px|<font color="grey">Ikarita ya Finilande</font>]]
 
 '''Finilande''' (izina mu [[kinyafinilande]] : ''Suomi'' ; izina mu [[kinyafinilande ]] : ''Finland'' ) n’igihugu muri [[Uburayi]].
 
