--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -110,6 +110,7 @@
 * '''NISR''' Ikigo cy’igihugu gishinzwe ibarurishamibare
 
 == O ==
+* '''OAFLA''' [[Umuryango w’Abafasha b’Abakuru b’Ibihugu by’Afurika wo Kurwanya Ubwandu bwa SIDA]] (Organisation of African First Ladies against HIV/AIDS)
 * '''OMS''' Umuryango w’abibumbye wita ku buzima 
 * '''ONU''' [[Umuryango w’Abibumye]]
 * '''ORINFOR''' [[Ikigo cy’Igihugu gishinzwe Itangazamakuru]]
