--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -23,6 +23,7 @@
 * '''CEPGL''' [[Umuryango w’Ubukungu bw’Ibihugu byo mu Karere k’Ibiyaga Bigari]] (''Communauté Economique des Pays des Grands Lacs'')
 * '''CG''' Inzego nkuru za Leta
 * '''cg''' cyangwa
+* '''CHUK''' [[Ibitaro bya Kaminuza by’i Kigali]]
 * '''CI''' [[Abaguzi Mpuzamahanga]] (''Consumers International'') 
 * '''CIEL''' [[Ikigo Gishinzwe Amategeko Mpuzamahanga Arengera Ibidukikije]] (''Center for International Environmental Law'')
 * '''CMAC''' [[Isoko ry’Imari n’Imıgabane]] 
