*Empty MediaWiki Message*

--- a/Ibitaro_bya_Kaminuza_by’i_Kigali.mw
+++ b/Ibitaro_bya_Kaminuza_by’i_Kigali.mw
@@ -1,3 +1,6 @@
 '''Ibitaro bya Kaminuza by’i Kigali''' (CHUK mu magambo ahinnye y’[[igifaransa]]; izina mu gifaransa: ''Centre Hospitalier Universitaire de Kigali'' ; izina mu [[cyongereza]]: University Teaching Hospital of Kigali) ni kimwe mu bitaro byo mu gihugu byoherezwa mo abarwayi bakomerewe cyane. Bifite inshingano zo gutanga inyigisho no guhugura abagize umwuga akazi ko kuvura, kuvura bikwiye abantu ari bose baje kuhivuriza no guteza imbere ubushakashatsi mu buvuzi . 
 
+== Imiyoboro ==
+*http://www.chk.org.rw/
+
 [[Category:Umuti]]
