--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -102,6 +102,7 @@
 * '''MSF''' [[Abavuzi Batagira Umupaka]] (''Médecins Sans Frontières'')
 
 == N ==
+* '''NACC''' [[Komisiyo y’Igihugu yo Kurwanya SIDA]] (''National AIDS Control Commission'')
 * '''NEPAD''' Ubufatanye bugamije iterambere ry’Afurika
 *'''NBI''' [[Umushinga w’ikibaya cy’uruzi rwa Nili]] 
 * '''NDIS''' Ubunyamabanga bw’igihugu bushinzwe ishyirwa mu bikorwa rya politike yo kwegereza abaturage ubuyobozi n’ubushobozi
