--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -142,6 +142,9 @@
 * '''SJADF''' Ihuriro ry’imiryango ku Mirenge igamije iterambere
 * '''SME/SMI''' Ibigo n’Inganda nto n’iziciriritse
 
+== T ==
+* '''TRAC''' [[Ikigo Gishinzwe Kuvura no Gukora Ubushakashatsi kuri SIDA]] (''Treatment and Research AIDS Center'' )
+
 == U ==
 * '''UN''' cyangwa '''UNO''' [[Umuryango w’Abibumye]] (''United Nations'' cyangwe ''United Nations Organization'' )
 * '''UNDP''' [[Ishami ry’Umuryango w’Abibumbye ryita ku Majyambere]] 
