--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -120,6 +120,7 @@
 * '''ORTPN ''' [[Ikigo cy’Igihugu cy’Ubukererugendo na Pariki Nasiyonali]] cyangwa Ofisi y'Igihugu y'Ubukerarugendo na Pariki
 
 == P ==
+* '''PACFA''' [[Gahunda yo Kurinda no Kwitaho Imiryango Ibana n’ Agakoko Gatera SIDA/SIDA]]  (''Protection and Care of Families Against HIV/AIDS'' )
 * '''PL''' [[Ishyaka ry’Ukwishyira Ukizana]] (''Parti libéral'')
 * '''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]] (''Parti pour le Progrès et la Concorde / Party for Progress and Concord'')
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
