--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -122,6 +122,7 @@
 == P ==
 * '''PACFA''' [[Gahunda yo Kurinda no Kwitaho Imiryango Ibana n’ Agakoko Gatera SIDA/SIDA]]  (''Protection and Care of Families Against HIV/AIDS'' )
 * '''PL''' [[Ishyaka ry’Ukwishyira Ukizana]] (''Parti libéral'')
+* '''PNILT''' [[Gahunda y’Igihugu yo Kurwanya Indwara ya Malariya]] (''National Malaria Control Programme'' )
 * '''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]] (''Parti pour le Progrès et la Concorde / Party for Progress and Concord'')
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
 * '''PSP''' [[Ishyaka ry’Ubwisungane Bugamije Iterambere]] (''Parti de la Solidarité et du Progrès / Party for Solidarity and Progress'')
