*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -152,7 +152,7 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Gerenada]]
 | [[ISO 3166-1 alpha-2#GD|<tt>GD</tt>]] || <tt>GRD</tt> || <tt>308</tt> || [[ISO 3166-2:GD]]
 |-
-| [[Geworigiya]]
+| [[Geworugiya]]
 | [[ISO 3166-1 alpha-2#GE|<tt>GE</tt>]] || <tt>GEO</tt> || <tt>268</tt> || [[ISO 3166-2:GE]]
 |-
 | [[Geworugiya y’Epfo n’Ibirwa bya Sanduwice y’Epfo]]
