*Empty MediaWiki Message*

--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -122,7 +122,7 @@
 |-
 | GBP || 826 || [[Ipawundi Siterilingi]] || [[Ubwongereza]], ([[Geworugiya y’Epfo n’Ibirwa bya Sanduwice y’Epfo]])
 |-
-| GEL || 981 || [[Ilari Geworugiya]] || [[Geworigiya]]   
+| GEL || 981 || [[Ilari Geworugiya]] || [[Geworugiya]]   
 |-
 | GHS || 936 || [[Isedi rya Gana]] || [[Gana]]
 |-
