*Empty MediaWiki Message*

--- a/Helena_Ntagatifu.mw
+++ b/Helena_Ntagatifu.mw
@@ -1,5 +1,5 @@
 [[File:Flag of Saint Helena.svg|thumb|250px|<font color="grey">Ibendera rya Helena Ntagatifu</font>]]
-[[File:LocationStHelena.png|thumb|250px|<font color="grey">Ikarita ya Helena Ntagatifu</font>]]
+[[File:LocationStHelena.PNG|thumb|250px|<font color="grey">Ikarita ya Helena Ntagatifu</font>]]
 
 '''Helena Ntagatifu''' (izina mu [[cyongereza]] : ''Saint Helena, Ascension and Tristan da Cunha'' ) n’[[igihugu]] muri [[Afurika]].
 
