*Empty MediaWiki Message*

--- a/Morodoviya.mw
+++ b/Morodoviya.mw
@@ -1,7 +1,7 @@
-[[File:Flag of Mordovia.svg|thumb|250px|<font color="grey">Ibendera rya Mordoviya</font>]]
-[[File:Map of Russia - Republic of Mordovia (2008-03).svg|thumb|250px|<font color="grey">Ikarita ya Mordoviya</font>]]
+[[File:Flag of Mordovia.svg|thumb|250px|<font color="grey">Ibendera rya Morodoviya</font>]]
+[[File:Map of Russia - Republic of Mordovia (2008-03).svg|thumb|250px|<font color="grey">Ikarita ya Morodoviya</font>]]
 
-'''Aligeriya''' (izina mu [[kimokisha]] : ''Мордовия Республикасы'' ; izina mu [[kirusiya]] : ''Республика Мордовия'' ) n’[[igihugu]] m’[[Uburusiya]].
+'''Morodoviya''' (izina mu [[kimokisha]] : ''Мордовия Республикасы'' ; izina mu [[kirusiya]] : ''Республика Мордовия'' ) n’[[igihugu]] m’[[Uburusiya]].
 
 [[Category:Uburusiya]]
 [[Category:Ibihugu]]
