--- a/Kinyarwanda.mw
+++ b/Kinyarwanda.mw
@@ -118,6 +118,21 @@ Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw
 
 [[Category:Kinyarwanda]]
 
+== Alfabeti y’ikinyarwanda ==
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[C]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[H]]||width=3% align="center"|[[I]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[O]]||width=3% align="center"|[[P]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[T]]||width=3% align="center"|[[U]]||width=3% align="center"|[[V]]||width=3% align="center"|[[W]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|align="center"|a||align="center"|b||align="center"|c||align="center"|d||align="center"|e||align="center"|f||align="center"|g||align="center"|h||align="center"|i||align="center"|j||align="center"|k||align="center"|l||align="center"|m||align="center"|n||align="center"|o||align="center"|p||align="center"|r||align="center"|s||align="center"|t||align="center"|u||align="center"|v||align="center"|w||align="center"|y||align="center"|z
+|}
+</center>
+
+
 == Imiyoboro ==
 *http://marshill.org/refugees/files/2010/07/Kinyarwanda-English-Dictionary.pdf
 
