--- a/Kinyarwanda.mw
+++ b/Kinyarwanda.mw
@@ -5,6 +5,8 @@
 Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw'abirabura bo muri Afurika y'epfo:urugero:umuntu, abantu, ingwe, amanzi, umutwaro, ingata, inyama, inyoni, iminwe, malume, umukwe, abatwa,.....
 
 == Alfabeti y’ikinyarwanda ==
+Ikinyarwanda kigizwe n'inyuguti 24 : a b c d e f g h i j k l m n o p r s t u v w y z
+
 <center>
 {|class="wikitable" style="border-collapse:collapse;"
 |-
