--- a/Kinyarwanda.mw
+++ b/Kinyarwanda.mw
@@ -7,6 +7,10 @@ Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw
 == Alfabeti y’ikinyarwanda ==
 Ikinyarwanda kigizwe n'inyuguti 24 : a b c d e f g h i j k l m n o p r s t u v w y z
 
+Izi nyuguti 24 zilimo ibice 2
+:inyajwi 5 : a e i o u
+:indagi 19 : b c d f g h j k l m n p r s t v w y z 
+
 <center>
 {|class="wikitable" style="border-collapse:collapse;"
 |-
