--- a/Kinyarwanda.mw
+++ b/Kinyarwanda.mw
@@ -24,6 +24,15 @@ Izi nyuguti 24 zilimo ibice 2
 |}
 </center>
 
+
+Indagi zivamo ibihekane bigizwe n,inyuguti 2 3 ndetse n,inyuguti 4 bikongerwaho nabyo buli gihe inyajwi kugirango bivugike neza.
+
+:Urugero ibihekane 2 ''nd'' kongeraho inyajwi ''ndi nde nda ndo ndu'' Ukandika ijambo indege.
+
+:Ibihekane 3 ndw kongeraho inyajwi ''ndwi ndwe ndwa ndwo ndwu'' Ukandika ijambo indwara.
+
+:Ibihekane 4 nshy kwongeraho inyajwi ''nshyi nshye nshya nshyo nshyu'' Ukandika ijambo inshyushyu.
+
 == ==
 
 {| class="wikitable"
