--- a/Ikinyankore.mw
+++ b/Ikinyankore.mw
@@ -1,6 +1,6 @@
 '''Ikinyankore''' ni [[ururimi]] rw’[[abanyankore]] na rw’[[Uganda]]. 
 
-Mu nyandiko ziza gukurikira hari aho tuza kuvuga ngo ijambo iri n’iri rifitanye isano n’ururimi rw’ikinyankore ([[abanyankore]] bita ururimi rwabo [[urunyankore]]). Ubundi twagombye kuvuga [[runyakore-rukiga]], mu magambo abiri ahujwe n’akarongo gatambitse. Twasanze gukoresha ariya magambo abiri byajijisha kandi icyo tugamije ari ugusobanura ku buryo bwumvikana kuri bose, ntakwibaza ibindi bibazo. Kubafite amatsiko, abakiga bita ururimi rwabo urukiga naho abanyankore bakita ururimi rwabo urunyankore. Izi ndimi zombi rero zirasa cyane, kimwe nk’[[ikinyarwanda]] n’[[ikirundi]].
+Mu nyandiko ziza gukurikira hari aho tuza kuvuga ngo ijambo iri n’iri rifitanye isano n’ururimi rw’ikinyankore ([[abanyankore]] bita ururimi rwabo [[urunyankore]]). Ubundi twagombye kuvuga [[Runyankore-Rukiga]], mu magambo abiri ahujwe n’akarongo gatambitse. Twasanze gukoresha ariya magambo abiri byajijisha kandi icyo tugamije ari ugusobanura ku buryo bwumvikana kuri bose, ntakwibaza ibindi bibazo. Kubafite amatsiko, abakiga bita ururimi rwabo urukiga naho abanyankore bakita ururimi rwabo urunyankore. Izi ndimi zombi rero zirasa cyane, kimwe nk’[[ikinyarwanda]] n’[[ikirundi]].
 
 Abanyankore bita ururimi rwabo Runyankole cyangwa Runyankore
 
