--- a/Igikuyu.mw
+++ b/Igikuyu.mw
@@ -1,3 +1,31 @@
 '''Igikuyu''' cyangwa '''Ikikuyu''' (izina mu gikuyu : ''Gĩkũyũ'' ) ni [[ururimi]] rumwe mu zinini zo muri [[Kenya]]. Izindi zifite abantu benshi zo mu muryango w’Abantu ni [[Igikamba]] n'[[Ikiruya]]. Haba ni umuryango witwa Nilotiki urimo [[Ikimasayi]], [[Kalenjini]] n’[[Ikijyaluwo]]. Igikuyu gisangiye ibintu byinshi n’[[ikinyarwanda]] kubera ko zombi ziva indimwe ariko na none hari na byinshi by'umwihariko zisangiye bitaboneka mu zindi. Ikizwi cyane ni itegeko rigenga imivugire y’ingombajwi ryitwa irya Dahl (''Dahl's Law''). Riraza kuboneka hepfo mu ngero ziza gutangwa.
 
 Muri iyi nyandiko, ndibanda cyane ku magambo izi ndimi zombi zisangiye, imiterere y’amagambo hamwe n’amategeko agenga imivugire y’uru rurimi.
+
+[[Category:Indimi z’ikibantu]]
+[[Category:Kenya]]
+
+[[bn:গিকুয়ু ভাষা]]
+[[br:Gikouyoueg]]
+[[cs:Kikujština]]
+[[de:Kikuyu (Sprache)]]
+[[en:Gikuyu language]]
+[[es:Idioma kikuyu]]
+[[eo:Kuja lingvo]]
+[[fr:Kikuyu (langue)]]
+[[ki:Gĩgĩkũyũ]]
+[[is:Kíkújú]]
+[[sw:Kikikuyu]]
+[[nl:Gikuyu (taal)]]
+[[ja:キクユ語]]
+[[no:Kikuyu (språk)]]
+[[nov:Gikuyum]]
+[[pl:Język kikuju]]
+[[pt:Língua kikuyu]]
+[[ksh:Gėkooijo (Shprooch)]]
+[[qu:Kikuyu simi]]
+[[ru:Кикуйю (язык)]]
+[[sk:Kikujčina]]
+[[sv:Kikuyu (språk)]]
+[[ta:கிகுயு மொழி]]
+[[uk:Кікуйю (мова)]]
