--- a/Igiswahili.mw
+++ b/Igiswahili.mw
@@ -8,6 +8,24 @@ Mu rwego mpuzamahanga, Igiswahili gifata intera kirushaho gukoreshwa dore ko ubu
 
 Izo mpamvu zose nizo zatumye ikinyamakuru Izuba Rirashye ryegereye Abanyarwanda batandukanye mu duce twose tw’Igihugu, mu rwego rwo kumenya uko bafata urwo rurimi n’uruhare babona rwagira mu kuzahuza abatuye EAC, dore ko unasanga Abanyarwanda batari bake bavuga Igiswahili.
 
+== Alfabeti y’igiswahili ==
+Igiswahili kigizwe n'inyuguti 24 : a b c d e f g h i j k l m n o p r s t u v w y z
+:inyajwi 5 : a e i o u
+:indagi 19 : b c d f g h j k l m n p r s t v w y z 
+:ibihekane : dh gh kh mb mv mw nd ng ng’ nj ny nz sh th
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[Ch]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[H]]||width=3% align="center"|[[I]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[O]]||width=3% align="center"|[[P]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[T]]||width=3% align="center"|[[U]]||width=3% align="center"|[[V]]||width=3% align="center"|[[W]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|align="center"|a||align="center"|b||align="center"|ch||align="center"|d||align="center"|e||align="center"|f||align="center"|g||align="center"|h||align="center"|i||align="center"|j||align="center"|k||align="center"|l||align="center"|m||align="center"|n||align="center"|o||align="center"|p||align="center"|r||align="center"|s||align="center"|t||align="center"|u||align="center"|v||align="center"|w||align="center"|y||align="center"|z
+|}
+</center>
+
 == Imiyoboro ==
 * http://www.izuba.org.rw/index.php?issue=120&article=1725
 
