--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -56,6 +56,10 @@
 * '''Yiyorlar''' – Bararya
 
 == Alfabeti y’ikinyaturukiya ==
+Ikinyaturukiya kigizwe n'inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o ö p r s ş t u ü v y z
+:inyajwi 5 : a e ı i o ö u ü
+:indagi 19 : b c ç d f g ğ h j k l m n p r s ş t v y z 
+
 <center>
 {|class="wikitable" style="border-collapse:collapse;"
 |-
