--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -74,7 +74,7 @@ Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o 
 </center>
 
 == Imiyoboro ==
-* [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu ikinyaturukiya)</font>
+* [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu kinyaturukiya)</font>
 
 [[Category:Indimi z’ikinyaturukiya]]
 
