--- a/Ikiluba.mw
+++ b/Ikiluba.mw
@@ -2,6 +2,36 @@
 
 Abaluba batuye mu ntara ebyiri za Kongo ari zo [[Katanga]] na [[Kasayi]]. Abaluga ni ubwoko bunini cyane muri Kongo nyine. Ubundi bwoko bunini ni [[Abakongo]] batuye mu bihugu bitatu ari byo Kongo Brazzaville, Kongo Kinshasa na Angola. Uru rurimi abanditsi bamwe barwita '''Iciluba''', abandi '''Itshiluba''' abandi na none Ikiluba. Ni rumwe mu ndimi enye zikoreshwa mu nyandiko za Leta n'iz'amashuri. Izo zindi zemewe ni [[Igifaransa]], [[Igiswahili]] n'[[Ilingala]]. Kuko ruri mu muryango w'indimi zitwa iz'Abantu rusangiye amagambo menshi n'[[Ikinyarwanda]], imiterere y'amagambo n'interuro hamwe n'amategeko agenga uko ururimi ruvugwa. Rimwe na rimwe hari ubwo iyo miterere iba idahuje kubera ihinduka ry'indimi ariko ibyo ntibibe bitangaje kuko uko guhinduka gukurikiza amategeko abazobereye mu buhanga bwo gusesengura indimi baba bazi.
 
+Amagambo yerekeye ibice by'umubiri:
+
+*'''difu''' igifu
+*'''ditama''' itama
+*'''dibele''' ibere
+*'''ditako ''' itako
+*'''diso ''' ijisho
+*'''iminwe ''' iminwe
+*'''mutwe ''' umutwe
+*'''kuboko ''' ukuboko
+*'''kulu ''' ukuguru
+*'''lubavu ''' urubavu
+*'''kutwi ''' ugutwi
+*'''lubolo/imbolo ''' imboro
+*'''dibelo ''' ikibero
+*'''dino/meno ''' iryinyo/amenyo
+*'''muongo ''' umugongo
+*'''bubongo ''' ubwonko
+*'''lukongo ''' rugongo
+*'''ludimi ''' ururimi
+*'''mucima ''' umutima
+*'''mula/mila ''' ubura
+*'''mukono ''' umukono
+*'''umbidi ''' umubiri
+*'''kikoba ''' igikoba
+*'''kwapa ''' ukwaha
+*'''kanwa ''' akanwa
+*'''nywele ''' injwiri (umusatsi)
+*'''dingingo ''' ingingo
+*'''lwala ''' urwara
 
 [[Category:Indimi z’ikibantu]]
 [[Category:Repubulika Iharanira Demokarasi ya Kongo]]
