*Empty MediaWiki Message*

--- a/Abarundi.mw
+++ b/Abarundi.mw
@@ -1,5 +1,6 @@
-Abarundi ni abanyagihugu b'iburundi. Abantu beza bafise inyifato nziza. niwaba wifuza kubamenya rwose urakubitirayo wirabire. 
+'''Abarundi''' ni abanyagihugu b’i[[burundi]]. Abantu beza bafise inyifato nziza. niwaba wifuza kubamenya rwose urakubitirayo wirabire. 
 
+Ubwo bumwe bwari ubw’Abarundi bose: '''[[Abahutu]]''' , '''[[Abatutsi]]''' n''''[[Abatwa]]'''. 
 
 [[Category:Burundi]]
 [[Category:Umuryango]]
