--- a/Ikinyarwanda.mw
+++ b/Ikinyarwanda.mw
@@ -1,1 +1,184 @@
-#REDIRECT  [[Kinyarwanda]]
+'''Ikinyarwanda''' ni ururimi rw'abanya[[rwanda]]. Ikinyarwanda gisa n'[[Kirundi|Ikirundi]], ururimi rw'i [[Burundi]], rukanasa n'Igiha cyo muri [[Tanzaniya]].
+
+
+
+Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw'abirabura bo muri Afurika y'epfo:urugero:umuntu, abantu, ingwe, amanzi, umutwaro, ingata, inyama, inyoni, iminwe, malume, umukwe, abatwa,.....
+
+== Alfabeti y’ikinyarwanda ==
+Ikinyarwanda kigizwe n'inyuguti 24 : a b c d e f g h i j k l m n o p r s t u v w y z
+
+Izi nyuguti 24 zilimo ibice 2
+:inyajwi 5 : a e i o u
+:indagi 19 : b c d f g h j k l m n p r s t v w y z 
+
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[C]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[H]]||width=3% align="center"|[[I]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[O]]||width=3% align="center"|[[P]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[T]]||width=3% align="center"|[[U]]||width=3% align="center"|[[V]]||width=3% align="center"|[[W]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|align="center"|a||align="center"|b||align="center"|c||align="center"|d||align="center"|e||align="center"|f||align="center"|g||align="center"|h||align="center"|i||align="center"|j||align="center"|k||align="center"|l||align="center"|m||align="center"|n||align="center"|o||align="center"|p||align="center"|r||align="center"|s||align="center"|t||align="center"|u||align="center"|v||align="center"|w||align="center"|y||align="center"|z
+|}
+</center>
+
+
+Indagi zivamo ibihekane bigizwe n,inyuguti 2 3 ndetse n,inyuguti 4 bikongerwaho nabyo buli gihe inyajwi kugirango bivugike neza.
+
+:Urugero ibihekane 2 ''nd'' kongeraho inyajwi ''ndi nde nda ndo ndu'' Ukandika ijambo indege.
+
+:Ibihekane 3 ndw kongeraho inyajwi ''ndwi ndwe ndwa ndwo ndwu'' Ukandika ijambo indwara.
+
+:Ibihekane 4 nshy kwongeraho inyajwi ''nshyi nshye nshya nshyo nshyu'' Ukandika ijambo inshyushyu.
+
+== ==
+
+{| class="wikitable"
+!      || umugereka     || ubuke     || 
+|-
+| I    || ''(u)mu-''   || ''(a)ba-'' || 
+|-
+| II   || ''(u)mu-''   || ''(i)mi-'' ||
+|-
+| III  || ''(i)(ri)-'' || ''(a)ma-'' ||
+|-
+| IV   || ''(i)ki-'' or ''(i)gi-'' || ''(i)bi-'' ||
+|-
+| V    || ''(i)n-''    || ''(i)n-'' ||
+|-
+| VI   || ''(u)ru-''   || ''(i)n-'' ||
+|-
+| VII  || ''(a)ka-''   || ''(u)tu-'' ||
+|-
+| VIII || ''(u)bu-''   || ''(u)bu-'' ||
+|-
+| IX   || ''(u)ku-''   || ''(a)ma-'' ||
+|-
+| X    || ''(a)ha-''   || ''(a)ha-'' ||
+|}
+
+== ==
+{| class="wikitable" style="text-align: center"
+! rowspan="2" | "Class"
+! colspan="2" | umugereka 
+! colspan="2" | ubuke 
+|-
+! "Noun"
+! "Possessive"
+! "Noun"
+! "Possessive"
+|-
+! 1
+| umu || wa || aba || ba
+|-
+! 2
+| umu || wa || imi || ya
+|-
+! 3
+| i, in || ya || i, in || za
+|-
+! 4
+| iki || cya || ibi || bya
+|-
+! 5
+| i(ri) || rya || ama || ya
+|-
+! 6
+| uru || rwa || in || za
+|-
+! 7
+| aka || ka || utu || twa
+|-
+! 8
+| ubu || bwa || ama || ya
+|-
+! 9
+| uku || kwa || ama || ya
+|-
+! 10
+| aha || ha ||  || 
+|}
+
+== ==
+{|class=wikitable
+! !! !! !! !! !! !! !! || || 
+|-
+| 1 (sg.)    || umu   || mu || wa  || uyu || uwo  || uriya  || wa  || n, u, a    || n, ku, mu
+|-
+| 1 (pl.)    || aba   || ba || ba  || aba || abo  || bariya || ba  || tu, mu, ba || tu, ba, ba
+|-
+| 2 (sg.)   || umu   || mu || wa  || uyu || uwo  || uriya  || wa  || u          || wu
+|-
+| 2 (pl.)   || imi   || mi || ya  || iyi || iyo  || iriya  || ya  || i          || yi
+|-
+| 3 (sg.)  || i, in || n  || ya  || iyi || iyo  || iriya  || ya  || i          || yi
+|-
+| 3 (pl.)  || i, in || n  || za  || izi || izo  || ziriya || za  || zi         || zi
+|-
+| 4 (sg.)   || iki   || ki || cya || iki || icyo || kiriya || cya || ki         || ki
+|-
+| 4 (pl.)   || ibi   || bi || bya || ibi || ibyo || biriya || bya || bi         || bi
+|-
+| 5 (sg.)    || i     || ri || rya || iri || iryo || ririya || rya || ri         || ri
+|-
+| 5 (pl.)    || ama   || ma || ya  || aya || ayo  || ariya  || ya  || a          || ya
+|-
+| 6 (sg.)   || uru   || ru || rwa || uru || urwo || ruriya || rwa || ru         || ru
+|-
+| 6 (pl.)   || in    || n  || za  || izi || izo  || ziriya || za  || zi         || zi
+|-
+| 7 (sg.)  || aka   || ka || ka  || aka || ako  || kariya || ka  || ka         || ka
+|-
+| 7 (pl.)  || utu   || tu || twa || utu || utwo || turiya || twa || tu         || tu
+|-
+| 8 (sg.) || ubu   || bu || bwa || ubu || ubwo || buriya || bwa || bu         || bu
+|-
+| 8 (pl.) || ama   || ma || ya  || aya || ayo  || ariya  || ya  || a          || ya
+|-
+| 9 (sg.)   || uku   || ku || kwa || uku || ukwo || kuriya || kwa || ku         || ku
+|-
+| 9 (pl.)   || ama   || ma || ya  || aya || ayo  || ariya  || ya  || a          || ya
+|-
+| 10          || aha   || ha || ha  || aha || aho  || hariya || ha  || ha         || ha
+|}
+
+
+== Imiyoboro ==
+*http://marshill.org/refugees/files/2010/07/Kinyarwanda-English-Dictionary.pdf
+
+
+[[Category:Kinyarwanda]]
+
+[[bg:Киняруанда]]
+[[bn:কিনিয়ারোয়ান্ডা ভাষা]]
+[[cs:Rwandština]]
+[[da:Kinyarwanda]]
+[[de:Kinyarwanda]]
+[[en:Kinyarwanda]]
+[[eo:Ruanda lingvo]]
+[[es:Kinyarwanda]]
+[[eu:Kinyarwanda]]
+[[fi:Ruandan kieli]]
+[[fr:Kinyarwanda]]
+[[hr:Rwanda jezik]]
+[[id:Bahasa Kinyarwanda]]
+[[it:Lingua kinyarwanda]]
+[[ja:ルワンダ語]]
+[[ko:키냐르완다어]]
+[[lv:Kiņaruandas valoda]]
+[[ms:Bahasa Kinyarwanda]]
+[[nl:Kinyarwanda]]
+[[no:Kinyarwanda]]
+[[nov:Rwandum]]
+[[pl:Język ruanda-rundi]]
+[[pt:Língua kinyarwanda]]
+[[qu:Rwanda simi]]
+[[rn:Kinyarwanda]]
+[[ru:Руанда (язык)]]
+[[sv:Rwanda (språk)]]
+[[sw:Kinyarwanda]]
+[[ta:கின்யருவாண்டா மொழி]]
+[[uk:Руандійська мова]]
+[[zh:卢旺达语]]
