--- a/Ikinyarwanda.mw
+++ b/Ikinyarwanda.mw
@@ -1,6 +1,12 @@
-'''Ikinyarwanda''' ni ururimi rw'abanya[[rwanda]]. Ikinyarwanda gisa n'[[Kirundi|Ikirundi]], ururimi rw'i [[Burundi]], rukanasa n'Igiha cyo muri [[Tanzaniya]].
+'''Ikinyarwanda''' ni ururimi rw'[[abanyarwanda]]. Ikinyarwanda gisa n'[[Kirundi|Ikirundi]], ururimi rw'i [[Burundi]], rukanasa n'Igiha cyo muri [[Tanzaniya]].
 
+Ikinyarwanda gifite umwanya ukomeye mu mibereho y’Abanyarwanda. Ni rwo rurimi ruha Abanyarwanda ubushobozi bwo kuranga isi, kugaragaza imbamutima, gushyikirana baganira, bungurana ibitekerezo, bagezanyaho ubutumwa…
 
+Ururimi rw’ikinyarwanda rufite uruhare rukomeye mu guhamya Umunyarwanda udafite isoni n’ubwoba by’umuco we kandi utisuzugura. Umuco w’u Rwanda ukeneye abawurinda n’abawubungabunga ngo hato imico y’amahanga itawumira. Iyo nshingano rero ni iy’Abanyarwanda ubwabo. Inzira ya mbere iriho ni ukwigisha ikinyarwanda.
+
+Kwigisha ikinyarwanda bihamye rero ni ugushimangira ubunyarwanda. Ni ugushyikiriza umwana w’u Rwanda ibyo abakurambere bahanze bakabisigira Umunyarwanda wese ho umurage. Bityo kwiga ikinyarwanda bikaba guhura n’ibyo kibumbatiye: uko giteye, ubugeni gihetse, umuco n’imyumvire y’Abanyarwanda. Ibi bisobanura ko kwigisha ikinyarwanda ari ugufasha umwana w’u Rwanda kugicengera ari mu miterere yacyo no bwiza bwacyo: uko cyemerera ukivuga gutaka imvugo ye.
+
+Kwigisha ikinyarwanda rero bikwiye kuba umwanya wo guha Umunyarwanda ubushobozi bwo kwirinda kumirwa n’amahanga, ibyiza agisangamo akabyamamaza, ibyo anenga akabikosora, akagikungahaza ngo gihangane n’iterambere isi ihorana.
 
 Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw'abirabura bo muri Afurika y'epfo:urugero:umuntu, abantu, ingwe, amanzi, umutwaro, ingata, inyama, inyoni, iminwe, malume, umukwe, abatwa,.....
 
