--- a/Akabambano.mw
+++ b/Akabambano.mw
@@ -2,7 +2,7 @@
 
 '''Akabambano''' (izina mu [[cyongereza]] na [[gifaransa]] : ''hymen'' )
 
-Aya mashusho arerekana umwanya uri hagati y’imigoma mito imbere mu [[igituba]]. Kuva hejuru ku nsya ugana hasi ushobora kubona rugongo, umwenge wo kunyariramo n’umwinjiriro w’igituba.
+Aya mashusho arerekana umwanya uri hagati y’imigoma mito imbere mu [[igituba]]. Kuva hejuru ku nsya ugana hasi ushobora kubona rugongo, umwenge wo kunyariramo n’umwinjiriro w’[[igituba]].
 
 Akabambano ni cyo kimenyetso cy’umukobwa w’isugi mu muco. Ni agahu koroshye gashobora gucibwa n’imyitozo cyangwa ubwoko bw’amapamba abakobwa binjiza mu gituba ngo bifashe mu gihe cy’imihango. Kereka umukobwa yarasambanye, ubundi gucika akabambano mu bundi buryo ntibyambura umukobwa ubusugi bwe.
 
