*Empty MediaWiki Message*

--- a/Bene.mw
+++ b/Bene.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Benin.svg|thumb|250px|<font color="grey">Ibendera rya Bene</font>]]
 [[File:LocationBenin.svg|thumb|250px|<font color="grey">Ikarita ya Bene</font>]]
 
-'''Bene''' (izina mu [[cyongereza]] : ''Benin'' ) n’[[igihugu]] muri [[Afurika]].
+'''Bene''' (izina mu [[gifaransa]] : ''Benin'' ) n’[[igihugu]] muri [[Afurika]].
 
 [[Category:Afurika]]
 [[Category:Ibihugu]]
