*Empty MediaWiki Message*

--- a/Geworugiya.mw
+++ b/Geworugiya.mw
@@ -1,9 +1,9 @@
 [[File:Flag of Georgia.svg|thumb|250px|<font color="grey">Ibendera rya Geworigiya</font>]]
 [[File:Ort-Georgien.png|thumb|250px|<font color="grey">Ikarita ya Geworigiya</font>]]
 
-'''Geworugiya''' cyangwa '''Geworigiya''' (izina mu [[kinyageworugiya]] : '''საქართველო''' ''sak’art’velo'' ) n’[[igihugu]] muri [[Aziya]].
+'''Geworugiya''' cyangwa '''Geworigiya''' (izina mu [[kinyageworugiya]] : '''საქართველო''' ''sak’art’velo'' ) n’[[igihugu]] muri [[Evropa]].
 
-[[Category:Aziya]]
+[[Category:Evropa]]
 [[Category:Ibihugu]]
 
 [[ab:Қырҭтәыла]]
