--- a/Geworugiya.mw
+++ b/Geworugiya.mw
@@ -1,9 +1,10 @@
 [[File:Flag of Georgia.svg|thumb|250px|<font color="grey">Ibendera rya Geworigiya</font>]]
 [[File:Ort-Georgien.png|thumb|250px|<font color="grey">Ikarita ya Geworigiya</font>]]
 
-'''Geworugiya''' cyangwa '''Geworigiya''' (izina mu [[kinyageworugiya]] : '''საქართველო''' ''sak’art’velo'' ) n’[[igihugu]] muri [[Evropa]].
+'''Geworugiya''' cyangwa '''Geworigiya''' (izina mu [[kinyageworugiya]] : '''საქართველო''' ''sak’art’velo'' ) n’[[igihugu]] muri [[Uburayi]] n’[[Aziya]].
 
 [[Category:Evropa]]
+[[Category:Uburayi]]
 [[Category:Ibihugu]]
 
 [[ab:Қырҭтәыла]]
