*Empty MediaWiki Message*

--- a/Geworugiya.mw
+++ b/Geworugiya.mw
@@ -3,7 +3,7 @@
 
 '''Geworugiya''' cyangwa '''Geworigiya''' (izina mu [[kinyageworugiya]] : '''საქართველო''' ''sak’art’velo'' ) n’[[igihugu]] muri [[Uburayi]] n’[[Aziya]].
 
-[[Category:Evropa]]
+[[Category:Aziya]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
