[[Category:Indimi z’igihinde-buraya]]

--- a/Ikidage.mw
+++ b/Ikidage.mw
@@ -39,7 +39,7 @@ Umwana = ein Kind
 
 {{DEFAULTSORT:Dage}}
 
-[[Category:Indimi]]
+[[Category:Indimi z’igihinde-buraya]]
 [[Category:Abadage]]
 
 [[ab:Алман бызшәа]]
