*Empty MediaWiki Message*

--- a/Kirundi.mw
+++ b/Kirundi.mw
@@ -1,5 +1,9 @@
-'''Ikirundi''' ni urulimi rw'[[Abarundi]]. Ikirundi gisa n'[[kinyarwanda|Ikinyarwanda]], urulimi rw'u [[Rwanda]], n'Igiha, urulimi rwo muri [[Tanzaniya]].
+'''Ikirundi''' ni urulimi rw’[[Abarundi]]. Ikirundi gisa n’[[Ikinyarwanda]], urulimi rw’u [[Rwanda]], n’Igiha, urulimi rwo muri [[Tanzaniya]].
 
+== Ikirundi n’Ikinyarwanda ==
+*'''icongereza''' icyongereza
+*'''canke''' cyangwa
+ 
 [[Category:Afurika]]
 [[Category:Indimi]]
 [[Category:Burundi]]
