*Empty MediaWiki Message*

--- a/Viyetinamu.mw
+++ b/Viyetinamu.mw
@@ -2,7 +2,205 @@
 [[File:LocationVietnam.png|thumb|250px|<font color="grey">Ikarita ya Vietnam</font>]]
 
 '''Vietnam''' (izina mu [[cyongereza]] : ''Việt Nam'' ; izina mu [[gitagaloge]] : Vietnam cyangwa ''Cộng hòa xã hội chủ nghĩa Việt Nam'' ) n’[[igihugu]] muri [[Aziya]].
+[[ace:Viètnam]]
+[[af:Viëtnam]]
+[[ak:Vietnam]]
+[[als:Vietnam]]
+[[am:ቬት ናም]]
+[[ang:Fietnam]]
+[[ar:فيتنام]]
+[[an:Vietnam]]
+[[roa-rup:Vietnam]]
+[[frp:Viêt Nam]]
+[[ast:Vietnam]]
+[[ay:Vietnam]]
+[[az:Vyetnam]]
+[[bjn:Vietnam]]
+[[id:Vietnam]]
+[[ms:Vietnam]]
+[[bm:Vietnam]]
+[[bn:ভিয়েতনাম]]
+[[zh-min-nan:Oa̍t-lâm]]
+[[jv:Viètnam]]
+[[su:Viétnam]]
+[[be:В'етнам]]
+[[be-x-old:Віетнам]]
+[[bcl:Bietnam]]
+[[bi:Vietnam]]
+[[bar:Vietnam]]
+[[bo:ཝི་ཏི་ནམ།]]
+[[bs:Vijetnam]]
+[[br:Viêt Nam]]
+[[bug:Vietnam]]
+[[bg:Виетнам]]
+[[ca:Vietnam]]
+[[ceb:Vietnam]]
+[[cv:Вьетнам]]
+[[cs:Vietnam]]
+[[ch:Vietnam]]
+[[cbk-zam:Vietnam]]
+[[tum:Vietnam]]
+[[cy:Fiet Nam]]
 [[da:Vietnam]]
+[[pdc:Vietnam]]
+[[de:Vietnam]]
+[[dv:ވިއެޓުނާމު]]
+[[nv:Biʼednam]]
+[[dsb:Vietnam]]
+[[na:Vietnam]]
+[[et:Vietnam]]
+[[el:Βιετνάμ]]
 [[en:Vietnam]]
-[[fi:Vietnam]]
+[[es:Vietnam]]
+[[eo:Vjetnamujo]]
+[[ext:Vietnam]]
+[[eu:Vietnam]]
+[[ee:Vietnam]]
+[[fa:ویتنام]]
+[[hif:Vietnam]]
+[[fo:Vjetnam]]
+[[fr:Viêt Nam]]
+[[fy:Fietnam]]
+[[ff:Vietnam]]
+[[fur:Vietnam]]
+[[ga:Vítneam]]
+[[gv:Yn Vietnam]]
+[[sm:Vietnam]]
+[[gd:Bhiet-Nam]]
+[[gl:Vietnam - Việt Nam]]
+[[gan:越南]]
+[[gu:વિએટનામ]]
+[[hak:Ye̍t-nàm]]
+[[xal:Вьетдин Орн]]
+[[ko:베트남]]
+[[haw:Wiekanama]]
+[[hy:Վիետնամ]]
+[[hi:वियतनाम]]
+[[hsb:Vietnam]]
+[[hr:Vijetnam]]
+[[io:Vietnam]]
+[[ilo:Vietnam]]
+[[bpy:ভিয়েতনাম]]
+[[ia:Vietnam]]
+[[ie:Viet-Nam]]
+[[ik:Vietnam]]
+[[os:Вьетнам]]
+[[zu:IVietnami]]
+[[is:Víetnam]]
+[[it:Vietnam]]
+[[he:וייטנאם]]
+[[kl:Vietnam]]
+[[kn:ವಿಯೆಟ್ನಾಮ್]]
+[[pam:Vietnam]]
+[[ka:ვიეტნამი]]
+[[ks:वियेतनाम]]
+[[csb:Wietnam]]
+[[kk:Виетнам]]
+[[kw:Vietnam]]
+[[ky:Вьетнам]]
+[[sw:Vietnam]]
+[[kv:Вьетнам]]
+[[ht:Vyetnam]]
+[[ku:Viyetnam]]
+[[lad:Vietnam]]
+[[lo:ປະເທດຫວຽດນາມ]]
+[[la:Vietnamia]]
+[[lv:Vjetnama]]
+[[lb:Vietnam]]
+[[lt:Vietnamas]]
+[[lij:Vietnam]]
+[[li:Viëtnam]]
+[[ln:Vietnami]]
+[[jbo:vietnam]]
+[[lmo:Vietnam]]
+[[hu:Vietnam]]
+[[mk:Виетнам]]
+[[ml:വിയറ്റ്നാം]]
+[[mt:Vjetnam]]
+[[mi:Whitināmu]]
+[[mr:व्हियेतनाम]]
+[[arz:فييتنام]]
+[[mzn:ویتنام]]
+[[mwl:Bietname]]
+[[mdf:Виетнам]]
+[[mn:Вьетнам]]
+[[my:ဗီယက်နမ်နိုင်ငံ]]
+[[nah:Vietnam]]
+[[nl:Vietnam]]
+[[nds-nl:Vietnam]]
+[[ja:ベトナム]]
+[[nap:Vietnam]]
+[[frr:Vietnam]]
+[[pih:Wiyetnaam]]
+[[no:Vietnam]]
+[[nn:Vietnam]]
+[[nrm:Vietnam]]
+[[nov:Vietnam]]
+[[oc:Vietnam]]
+[[uz:Vyetnam]]
+[[pfl:Vietnam]]
+[[pnb:ویتنام]]
+[[pap:Vietnam]]
+[[km:វៀតណាម]]
+[[pcd:Vietnam]]
+[[pms:Vietnam]]
+[[nds:Vietnam]]
+[[pl:Wietnam]]
+[[pnt:Βιετνάμ]]
+[[pt:Vietname]]
+[[kaa:Vietnam]]
+[[crh:Vyetnam]]
+[[ro:Vietnam]]
+[[rm:Vietnam]]
+[[qu:Witnam]]
+[[ru:Вьетнам]]
+[[sah:Вьетнам]]
+[[se:Vietnam]]
+[[sa:वियेतनाम]]
+[[sc:Vietnam]]
+[[sco:Vietnam]]
+[[stq:Vietnam]]
+[[sq:Vietnami]]
+[[scn:Vietnam]]
+[[si:වියට්නාමය]]
+[[simple:Vietnam]]
+[[ss:IViyethina]]
+[[sk:Vietnam]]
+[[sl:Vietnam]]
+[[szl:Wjetnam]]
+[[so:Vietnam]]
+[[ckb:ڤیەتنام]]
+[[sr:Вијетнам]]
+[[sh:Vijetnam]]
+[[sv:Vietnam]]
+[[tl:Biyetnam]]
+[[ta:வியட்நாம்]]
+[[kab:Vietnam]]
+[[roa-tara:Vietnam]]
+[[tt:Вьетнам]]
+[[te:వియత్నాం]]
+[[tet:Vietname]]
+[[th:ประเทศเวียดนาม]]
 [[vi:Việt Nam]]
+[[tg:Ветнам]]
+[[tpi:Vietnam]]
+[[tr:Vietnam]]
+[[tk:Wýetnam]]
+[[udm:Вьетнам]]
+[[uk:В'єтнам]]
+[[ur:ویتنام]]
+[[ug:ۋيېتنام]]
+[[vec:Vietnam]]
+[[vo:Vietnamän]]
+[[fiu-vro:Vietnam]]
+[[wa:Vietnam]]
+[[zh-classical:越南]]
+[[vls:Vietnam]]
+[[war:Vietnam]]
+[[wo:Wiyetnaam]]
+[[wuu:越南]]
+[[yi:וויעטנאם]]
+[[yo:Vietnam]]
+[[zh-yue:越南]]
+[[diq:Vietnam]]
+[[fi:Vietnam]]
