*Empty MediaWiki Message*

--- a/Viyetinamu.mw
+++ b/Viyetinamu.mw
@@ -1,7 +1,8 @@
-[[File:Flag of Vietnam.svg|thumb|250px|<font color="grey">Ibendera rya Vietnam</font>]]
-[[File:LocationVietnam.png|thumb|250px|<font color="grey">Ikarita ya Vietnam</font>]]
+[[File:Flag of Vietnam.svg|thumb|250px|<font color="grey">Ibendera rya Viyetinamu</font>]]
+[[File:LocationVietnam.png|thumb|250px|<font color="grey">Ikarita ya Viyetinamu</font>]]
 
-'''Vietnam''' (izina mu [[cyongereza]] : ''Việt Nam'' ; izina mu [[gitagaloge]] : Vietnam cyangwa ''Cộng hòa xã hội chủ nghĩa Việt Nam'' ) n’[[igihugu]] muri [[Aziya]].
+'''Viyetinamu''' (izina mu [[cyongereza]] : ''Việt Nam'' ; izina mu [[gitagaloge]] : Vietnam cyangwa ''Cộng hòa xã hội chủ nghĩa Việt Nam'' ) n’[[igihugu]] muri [[Aziya]].
+
 [[ace:Viètnam]]
 [[af:Viëtnam]]
 [[ak:Vietnam]]
