--- a/Viyetinamu.mw
+++ b/Viyetinamu.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Vietnam.svg|thumb|250px|<font color="grey">Ibendera rya Viyetinamu</font>]]
 [[File:LocationVietnam.png|thumb|250px|<font color="grey">Ikarita ya Viyetinamu</font>]]
 
-'''Viyetinamu''' (izina mu [[cyongereza]] : ''Việt Nam'' ; izina mu [[gitagaloge]] : Vietnam cyangwa ''Cộng hòa xã hội chủ nghĩa Việt Nam'' ) n’[[igihugu]] muri [[Aziya]].
+'''Viyetinamu''' (izina mu [[cyongereza]] : ''Việt Nam'' ; izina mu [[kinyaviyetinamu]] : Vietnam cyangwa ''Cộng hòa xã hội chủ nghĩa Việt Nam'' ) n’[[igihugu]] muri [[Aziya]].
 
 [[ace:Viètnam]]
 [[af:Viëtnam]]
