*Empty MediaWiki Message*

--- a/Igifero.mw
+++ b/Igifero.mw
@@ -1,4 +1,4 @@
-'''Igifero''' ni [[ururimi]] rw’[[Turukiya]]. 
+'''Igifero''' ni [[ururimi]] rw’[[Ibirwa bya Farowe]]. 
 
 == Alfabeti y’igifero ==
 Igifero kigizwe n’inyuguti 29 : a á b d ð e f g h i í j k l m n o ó p r s t u ú v y ý æ ø
