*Empty MediaWiki Message*

--- a/Igifero.mw
+++ b/Igifero.mw
@@ -19,3 +19,90 @@ Igifero kigizwe n’inyuguti 29 : a á b d ð e f g h i í j k l m n o ó p r s 
 </center>
 
 [[Category:Indimi z’igihinde-buraya]]
+
+[[af:Faroëes]]
+[[am:ፋሮኛ]]
+[[ang:Faroisc sprǣc]]
+[[ar:لغة فاروية]]
+[[an:Idioma feroés]]
+[[bn:ফারোয়েজীয় ভাষা]]
+[[be:Фарэрская мова]]
+[[be-x-old:Фарэрская мова]]
+[[bar:Färöische Språch]]
+[[bs:Farski jezik]]
+[[br:Faeroeg]]
+[[bg:Ферьорски език]]
+[[ca:Feroès]]
+[[cs:Faerština]]
+[[co:Lingua faroesa]]
+[[da:Færøsk (sprog)]]
+[[de:Färöische Sprache]]
+[[et:Fääri keel]]
+[[es:Idioma feroés]]
+[[eo:Feroa lingvo]]
+[[eu:Faroera]]
+[[fa:زبان فاروئی]]
+[[fo:Føroyskt mál]]
+[[fr:Féroïen]]
+[[fy:Faeröersk]]
+[[gv:Faaroish]]
+[[gl:Lingua feroesa]]
+[[ko:페로어]]
+[[hy:Ֆարյորերեն]]
+[[hi:फ़रोइस भाषा]]
+[[hsb:Färöšćina]]
+[[hr:Ferojski jezik]]
+[[io:Faerana linguo]]
+[[id:Bahasa Faroe]]
+[[os:Фарераг æвзаг]]
+[[is:Færeyska]]
+[[it:Lingua faroese]]
+[[he:פארואזית]]
+[[ka:ფარერული ენა]]
+[[kw:Faroyek]]
+[[ku:Zimanê feroeyî]]
+[[la:Lingua Faroensis]]
+[[lv:Fēriešu valoda]]
+[[lt:Farerų kalba]]
+[[lij:Lèngoa farœnse]]
+[[li:Faeröers]]
+[[hu:Feröeri nyelv]]
+[[mk:Фарски јазик]]
+[[arz:لغه فاروى]]
+[[ms:Bahasa Faroe]]
+[[nl:Faeröers]]
+[[nds-nl:Faeröars]]
+[[ja:フェロー語]]
+[[no:Færøysk]]
+[[nn:Færøysk]]
+[[oc:Feroés]]
+[[mhr:Фарер йылме]]
+[[pnb:فیروئی بولی]]
+[[pms:Lenga faroèisa]]
+[[pl:Język farerski]]
+[[pt:Língua feroesa]]
+[[crh:Farer tili]]
+[[ro:Limba feroeză]]
+[[ru:Фарерский язык]]
+[[se:Fearagiella]]
+[[sco:Faroese leid]]
+[[stq:Färöisk]]
+[[scn:Lingua faruisa]]
+[[simple:Faroese language]]
+[[sk:Faerčina]]
+[[sl:Ferščina]]
+[[sr:Ферјарски језик]]
+[[sh:Farski jezik]]
+[[fi:Fäärin kieli]]
+[[sv:Färöiska]]
+[[ta:பரோசு மொழி]]
+[[th:ภาษาแฟโร]]
+[[tg:Алифбои фароесӣ]]
+[[tr:Faroece]]
+[[uk:Фарерська мова]]
+[[ug:فائېروس تىل]]
+[[vec:Łéngua faroexe]]
+[[vi:Tiếng Faroe]]
+[[wa:Faeroyès]]
+[[bat-smg:Farėru kalba]]
+[[zh:法罗语]]
