*Empty MediaWiki Message*

--- a/Igifero.mw
+++ b/Igifero.mw
@@ -1,3 +1,4 @@
+[[File:Faroe islands isoglosses.png|thumb|250px|<font color="grey">Ikarita y’Igifero</font>]]
 '''Igifero''' ni [[ururimi]] rw’[[Ibirwa bya Farowe]]. 
 
 == Alfabeti y’igifero ==
