*Empty MediaWiki Message*

--- a/Igifero.mw
+++ b/Igifero.mw
@@ -19,6 +19,18 @@ Igifero kigizwe n’inyuguti 29 : a á b d ð e f g h i í j k l m n o ó p r s 
 |}
 </center>
 
+== Amagambo n'interuro mu gifero ==
+*'''eitt''' – rimwe
+*'''tvey''' – kabiri
+*'''trý''' – gatatu
+*'''fýra''' – kane
+*'''fimm''' – gatanu
+*'''seks''' – gatandatu
+*'''sjey''' – karindwi
+*'''átta''' – umunani
+*'''níggju''' – icyenda
+*'''tíggju''' – icumi
+
 [[Category:Indimi z’igihinde-buraya]]
 
 [[af:Faroëes]]
