*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -218,7 +218,7 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Ibirwa bya Farowe]]
 | [[ISO 3166-1 alpha-2#FO|<tt>FO</tt>]] || <tt>FRO</tt> || <tt>234</tt> || [[ISO 3166-2:FO]]
 |-
-| [[Ibirwa bya Folukilande]] cyangwa [[Maluvinasi]]
+| [[Ibirwa bya Folukilande]] cyangwa [[Ibirwa bya Maluvinasi|Maluvinasi]]
 | [[ISO 3166-1 alpha-2#FK|<tt>FK</tt>]] || <tt>FLK</tt> || <tt>238</tt> || [[ISO 3166-2:FK]]
 |-
 | [[Ibirwa bya Kayimani]]
