*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -257,9 +257,6 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Ikerene]]
 | [[ISO 3166-1 alpha-2#UA|<tt>UA</tt>]] || <tt>UKR</tt> || <tt>804</tt> || [[ISO 3166-2:UA]]
 |-
-| [[Ikigereki]]
-| [[ISO 3166-1 alpha-2#GR|<tt>GR</tt>]] || <tt>GRC</tt> || <tt>300</tt> || [[ISO 3166-2:GR]]
-|-
 | [[Ikirwa cya Bouve]]
 | [[ISO 3166-1 alpha-2#BV|<tt>BV</tt>]] || <tt>BVT</tt> || <tt>074</tt> || [[ISO 3166-2:BV]]
 |-
@@ -697,6 +694,9 @@ Urutonde rw’ibihugu ISO 3166-1
 |-
 | [[Ubufaransa]]
 | [[ISO 3166-1 alpha-2#FR|<tt>FR</tt>]] || <tt>FRA</tt> || <tt>250</tt> || [[ISO 3166-2:FR]]
+|-
+| [[Ubugereki]]
+| [[ISO 3166-1 alpha-2#GR|<tt>GR</tt>]] || <tt>GRC</tt> || <tt>300</tt> || [[ISO 3166-2:GR]]
 |-
 | [[Ubuhinde]]
 | [[ISO 3166-1 alpha-2#IN|<tt>IN</tt>]] || <tt>IND</tt> || <tt>356</tt> || [[ISO 3166-2:IN]]
