--- a/Ubugereki.mw
+++ b/Ubugereki.mw
@@ -1,1 +1,205 @@
-#REDIRECT [[Bugereki]]
+[[File:Flag of Greece.svg|thumb|250px|<font color="grey">Ibendera ry’Ubugereki</font>]]
+[[File:Location Greece EU Europe.png|thumb|250px|<font color="grey">Ikarita y’Ubugereki</font>]]
+
+'''Ubugereki''' (izina mu [[kigereki]] : ''Ελλάδα'' cyangwa ''Ελληνική Δημοκρατία'' ) n’[[igihugu]] mu [[Burayi]].
+
+[[Category:Uburayi]]
+[[Category:Ibihugu]] 
+
+[[ab:Барзентәыла]]
+[[ace:Yunani]]
+[[af:Griekeland]]
+[[als:Griechenland]]
+[[am:ግሪክ (አገር)]]
+[[an:Grecia]]
+[[ang:Crecaland]]
+[[ar:اليونان]]
+[[arc:ܝܘܢ]]
+[[arz:اليونان]]
+[[ast:Grecia]]
+[[ay:Grisya]]
+[[az:Yunanıstan]]
+[[bar:Griachaland]]
+[[bat-smg:Graikėjė]]
+[[bcl:Gresya]]
+[[be:Грэцыя]]
+[[be-x-old:Грэцыя]]
+[[bg:Гърция]]
+[[bi:Greece]]
+[[bn:গ্রিস]]
+[[bo:ཀེ་རི་སི།]]
+[[bpy:গ্রীস]]
+[[br:Gres (bro)]]
+[[bs:Grčka]]
+[[ca:Grècia]]
+[[ce:Джелтимохк]]
+[[ceb:Gresya]]
+[[ckb:یۆنان]]
+[[co:Grecia]]
+[[crh:Yunanistan]]
+[[cs:Řecko]]
+[[csb:Greckô]]
+[[cu:Грьци]]
+[[cv:Греци]]
+[[cy:Gwlad Groeg]]
+[[da:Grækenland]]
+[[de:Griechenland]]
+[[diq:Yunanıstan]]
+[[dsb:Grichiska]]
+[[dv:ޔޫނާން]]
+[[dz:གིརིསི་]]
+[[ee:Greece]]
+[[el:Ελλάδα]]
+[[en:Greece]]
+[[eo:Grekio]]
+[[es:Grecia]]
+[[et:Kreeka]]
+[[eu:Grezia]]
+[[ext:Grécia]]
+[[fa:یونان]]
+[[fi:Kreikka]]
+[[fiu-vro:Kreeka]]
+[[fo:Grikkaland]]
+[[fr:Grèce]]
+[[frp:Grèce]]
+[[frr:Griichenlönj]]
+[[fur:Grecie]]
+[[fy:Grikelân]]
+[[ga:An Ghréig]]
+[[gag:Grețiya]]
+[[gan:希臘]]
+[[gd:A' Ghrèig]]
+[[gl:Grecia - Ελλάδα]]
+[[gn:Gyresia]]
+[[gu:ગ્રીસ]]
+[[gv:Yn Ghreag]]
+[[hak:Hî-lia̍p]]
+[[haw:Helene]]
+[[he:יוון]]
+[[hi:यूनान]]
+[[hif:Greece]]
+[[hr:Grčka]]
+[[hsb:Grjekska]]
+[[ht:Grès]]
+[[hu:Görögország]]
+[[hy:Հունաստան]]
+[[ia:Grecia]]
+[[id:Yunani]]
+[[ie:Grecia]]
+[[ilo:Grecia]]
+[[io:Grekia]]
+[[is:Grikkland]]
+[[it:Grecia]]
+[[ja:ギリシャ]]
+[[jbo:xesygu'e]]
+[[jv:Yunani]]
+[[ka:საბერძნეთი]]
+[[kaa:Gretsiya]]
+[[kg:Gelesi]]
+[[kk:Грекия]]
+[[kl:Grækenlandi]]
+[[kn:ಗ್ರೀಸ್]]
+[[ko:그리스]]
+[[koi:Эллада]]
+[[krc:Греция]]
+[[ksh:Jrėėshelandt]]
+[[ku:Yewnanistan]]
+[[kv:Греция]]
+[[kw:Pow Grek]]
+[[ky:Греция]]
+[[la:Graecia]]
+[[lad:Gresia]]
+[[lb:Griicheland]]
+[[lg:Buyonaani]]
+[[li:Griekeland]]
+[[lij:Greçia]]
+[[lmo:Grecia]]
+[[ln:Gresi]]
+[[lt:Graikija]]
+[[lv:Grieķija]]
+[[mdf:Грекмастор]]
+[[mhr:Греций]]
+[[mi:Kirihi]]
+[[mk:Грција]]
+[[ml:ഗ്രീസ്]]
+[[mn:Грек]]
+[[mr:ग्रीस]]
+[[ms:Greece]]
+[[mt:Greċja]]
+[[mzn:یونان]]
+[[na:Greece]]
+[[nah:Grecia]]
+[[nap:Gracia]]
+[[nds:Grekenland]]
+[[nds-nl:Griekenlaand]]
+[[ne:ग्रीस]]
+[[nl:Griekenland]]
+[[nn:Hellas]]
+[[no:Hellas]]
+[[nov:Grekia]]
+[[nrm:Grêce]]
+[[nv:Gwíík Dineʼé Bikéyah]]
+[[oc:Grècia]]
+[[os:Грекъ]]
+[[pam:Greece]]
+[[pih:Griese]]
+[[pl:Grecja]]
+[[pms:Grecia]]
+[[pnb:یونان]]
+[[pnt:Ελλάδα]]
+[[ps:يونان]]
+[[pt:Grécia]]
+[[qu:Grisya]]
+[[rm:Grezia]]
+[[ro:Grecia]]
+[[roa-rup:Gãrtsia]]
+[[roa-tara:Grecie]]
+[[ru:Греция]]
+[[sa:ग्रीस (यूनान)]]
+[[sah:Греция]]
+[[sc:Grèghia]]
+[[scn:Grecia]]
+[[sco:Greece]]
+[[se:Greika]]
+[[sh:Grčka]]
+[[simple:Greece]]
+[[sk:Grécko]]
+[[sl:Grčija]]
+[[so:Giriig]]
+[[sq:Greqia]]
+[[sr:Грчка]]
+[[ss:IGrikhi]]
+[[stq:Griechenlound]]
+[[sv:Grekland]]
+[[sw:Ugiriki]]
+[[szl:Grecyjo]]
+[[ta:கிரேக்க நாடு]]
+[[te:గ్రీస్]]
+[[tet:Grésia]]
+[[tg:Юнон]]
+[[th:ประเทศกรีซ]]
+[[tk:Gresiýa]]
+[[tl:Gresya]]
+[[tpi:Gris]]
+[[tr:Yunanistan]]
+[[tt:Греция]]
+[[udm:Греция]]
+[[ug:گرېتسىيە]]
+[[uk:Греція]]
+[[ur:یونان]]
+[[uz:Yunoniston]]
+[[vec:Gresia]]
+[[vi:Hy Lạp]]
+[[vls:Grieknland]]
+[[vo:Grikän]]
+[[war:Gresya]]
+[[wo:Girees]]
+[[wuu:希腊]]
+[[xal:Грисин Орн]]
+[[yi:גריכנלאנד]]
+[[yo:Gríìsì]]
+[[zh:希腊]]
+[[zh-classical:希臘共和國]]
+[[zh-min-nan:Hi-lia̍p]]
+[[zh-yue:希臘]]
+[[zu:IGrisi]]
